--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
     <!-- Paragraph explaining code optimization -->
     <p>We can optimize a solution using both time and space optimization. To optimize a program,</p>
 
-    <!-- Ordered List explaining code optimization strategies -->
+    <!-- Ordered list explaining different aspects of code optimization -->
     <ol>
         <li>We can reduce the time taken to run the program and increase the space occupied.</li>
         <li>We can reduce the memory usage of the program and increase its total run time.</li>
