--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 
     <!-- Ordered list explaining different aspects of code optimization -->
     <ol>
-        <li>We can reduce the time taken to run the program and increase the space occupied</li>
+        <li>We can reduce the time taken to run the program without significantly increasing the space occupied</li>
         <li>We can reduce the memory usage of the program and increase its total run time</li>
         <li>We can reduce both time and space complexity by deploying relevant algorithms</li>
     </ol>
